@@ -1,4 +1,4 @@
-/* $Id: cmd.c,v 1.17 2007-10-19 09:21:26 nicm Exp $ */
+/* $Id: cmd.c,v 1.18 2007-10-19 11:10:35 nicm Exp $ */
 
 /*
  * Copyright (c) 2007 Nicholas Marriott <nicm@users.sourceforge.net>
@@ -27,6 +27,7 @@ const struct cmd_entry *cmd_table[] = {
 	&cmd_attach_session_entry,
 	&cmd_bind_key_entry,
 	&cmd_detach_session_entry,
+	&cmd_kill_window_entry,
 	&cmd_last_window_entry,
 	&cmd_list_keys_entry,
 	&cmd_list_sessions_entry,
