@@ -1,5 +1,7 @@
 19 October 2007
 
+* (nicm) kill-window command, bound to & by default (because it should be hard
+  to hit accidently).
 * (nicm) bell-style option with three choices: "none" completely ignore bell;
   "any" pass through a bell in any window to current; "current" ignore bells
   except in current window. This applies only to the bell terminal signal,
@@ -135,5 +137,5 @@
   (including mutt, emacs). No status bar yet and no key remapping or other
   customisation.
 
-$Id: CHANGES,v 1.43 2007-10-19 10:21:24 nicm Exp $
+$Id: CHANGES,v 1.44 2007-10-19 11:10:34 nicm Exp $
 
